...
      <FrameLayout
        android:id="@+id/contentFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

      <LinearLayout
        android:id="@+id/noData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:visibility="gone"
...
          android:text="@string/empty_surveys_message"
          android:textAppearance="@style/TextAppearance.AppCompat.Title" />

      </LinearLayout>

      <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddSurvey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/add"
        app:fabSize="normal"
        app:layout_anchor="@id/contentFrame"
...
