...
        android:paddingStart="56dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:text="@string/survey_id"
        />

      <TextView
        android:id="@+id/humanSurveyDetailId"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:drawablePadding="32dp"
        android:drawableStart="@drawable/tag"
...
